err/collective.uploadify.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/uploadify'...
Listing './lib/python3.5/site-packages/collective/uploadify/browser'...
Compiling './lib/python3.5/site-packages/collective/uploadify/browser/utility.py'...
***   File "./lib/python3.5/site-packages/collective/uploadify/browser/utility.py", line 53
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/uploadify/locales'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/da'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/de'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/es'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/eu'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/eu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/it'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/nl'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/zh_CN'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/zh_TW'...
Listing './lib/python3.5/site-packages/collective/uploadify/locales/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/uploadify/profiles'...
Listing './lib/python3.5/site-packages/collective/uploadify/profiles/default'...
Listing './lib/python3.5/site-packages/collective/uploadify/tests'...
Listing './lib/python3.5/site-packages/collective.uploadify-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
